--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -7,5 +7,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dialogMessage">Desea recordar la ruta !</string>
+    <string name="dialogMessageFinalizar">Desea finalizar la ruta !</string>
 
 </resources>
