--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,6 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="dialogMessage">Desea recordar la ruta !</string>
     <string name="dialogMessageFinalizar">Desea finalizar la ruta !</string>
+    <string name="dialogMessagePrint">Esta seguro de quitar la impresora !</string>
 
 </resources>
