Dialog Select Price and choose price when exist a price for date
- Se crea el diálogo para seleccionar fecha y hora en que está disponible el tiquete

- Se envía la nueva información para almacenar el tiquete cuando existe una venta futura, con la fecha del tiquete y el tipo del tiquete

- Se cambia la funcionalidad para permitir venta de tiquete con fecha

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,5 +13,8 @@
     <string name="remove_date">Remove Date</string>
     <string name="remember_route">Recordar ruta</string>
     <string name="forget_route">Olvidar ruta</string>
+    <string name="loading_hours">Cargando horarios...</string>
+    <string name="no_hours_defined_msg">No hay horarios definidos para esta fecha</string>
+    <string name="no_hours_available">No hay horarios disponibles</string>
 
 </resources>
