--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,5 +16,9 @@
     <string name="loading_hours">Cargando horarios...</string>
     <string name="no_hours_defined_msg">No hay horarios definidos para esta fecha</string>
     <string name="no_hours_available">No hay horarios disponibles</string>
+    <string name="intercity">Interurbanos</string>
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="next">Siguiente</string>
 
 </resources>
