--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,5 +21,10 @@
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="next">Siguiente</string>
     <string name="tickets">Tickets</string>
+    <string name="update_ticket">Actualizar Ticket</string>
+    <string name="voucher">Voucher</string>
+    <string name="date">Fecha</string>
+    <string name="search">Buscar</string>
+    <string name="ticket_info">Información del ticket</string>
 
 </resources>
