Update and refund Ticket feature on sale by date (#4)
* Add feature update date and hour from ticket

Se ha agregado la funcionalidad para actualizar el ticket, tanto la fecha como hora y se imprime la información.

* Changes ticket applied by Ruben and Adding bluetooth support for android 12

- Se agrega los cambios realizados por ruben para la impresión del ticket en PrintTicket.kt
- Se agrega el soporte para bluetooth en android 12

* Update Ticket Feature

- The functionality to update the ticket has been added
- The return option is created
- Fixes features when selecting or deselecting a chair.
- A new way of modifying the seats is added, so that the user can leave the ones he had chosen or change them all.

* Modified characteristict for update Ticket and manage the refund option

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -17,9 +17,19 @@
     <string name="no_hours_defined_msg">No hay horarios definidos para esta fecha</string>
     <string name="no_hours_available">No hay horarios disponibles</string>
     <string name="intercity">Interurbanos</string>
-    <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="next">Siguiente</string>
     <string name="tickets">Tickets</string>
+    <string name="update_ticket">Modificar Ticket</string>
+    <string name="voucher">Voucher</string>
+    <string name="date">Fecha</string>
+    <string name="search">Buscar</string>
+    <string name="ticket_info">Información del ticket</string>
+    <string name="select_chair">Seleccionar Silla</string>
+    <string name="devolution">Devolución</string>
+    <string name="update">Modificar</string>
+    <string name="enter_ticket_number">Ingresa el número de Ticket</string>
+    <string name="ticket_number">Número de ticket</string>
+    <string name="select_seats">Seleccione los asientos para hacer la devolución</string>
 
 </resources>
